# messenger

./: consumer.py  main.py  messenger.py  pyproject.toml  readme.md  utils.py
tests/: conftest.py  test_messenger.py
