[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["anaistang <anais.tang@ly.st>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.123"
pytest = "^7.3.1"
moto = "^4.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
